# PyQt-Object-Labeling

./: CMakeLists.txt  Dockerfile  README.md  resources.qrc  semantic_labeler.py
qml/: ImageView.qml  main.qml
src/: ImageProcessor.cpp  ImageProcessor.h  main.cpp
